--- a/package.json
+++ b/package.json
@@ -3,13 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "@meronex/icons": "^4.0.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "autoprefixer": "^9.8.6",
+    "axios": "^0.21.1",
+    "debounce-promise": "^3.1.2",
+    "dotenv": "^8.2.0",
+    "postcss": "^7.0.32",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-hook-form": "^6.14.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.4",
+    "react-service-worker": "^0.1.1",
+    "react-spinners": "^0.9.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "upkit": "^0.17.10"
   },
   "scripts": {
     "start": "react-scripts start",
